fix AuthenticationController imports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ jwt.prefix=Bearer
 spring.resttemplate.connection-timeout=5000
 spring.resttemplate.read-timeout=5000
 
+logging.level.com.hackathon.finservice=DEBUG
